--- a/index.html
+++ b/index.html
@@ -7,6 +7,19 @@
   <meta name="msapplication-TileImage" content="/mstile-144x144.png">
   <meta name="theme-color" content="#f8d9c9">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  
+  <!--  Essential META Tags -->
+  <meta property="og:title" content="URL Shortener">
+  <meta property="og:type" content="website" />
+  <meta property="og:image" content="/assets/meta-image.png">
+  <meta property="og:url" content="https://url-shortener.rubenconde.com/">
+  <meta name="twitter:card" content="summary_large_image">
+  
+  <!--  Non-Essential, But Recommended -->
+  <meta property="og:description" content="Tool to shorten urls and share them more efficiently. By RUBN/COND">
+  <meta property="og:site_name" content="URL Shortener">
+  <meta name="twitter:image:alt" content="URL Shortener">
+
   <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
   <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
   <link rel="icon" type="image/png" sizes="192x192" href="/android-chrome-192x192.png">
