fix: :bug: Meta tags
Signed-off-by: Rubén Conde <ruben.conde@ux-key.com>

--- a/index.html
+++ b/index.html
@@ -9,16 +9,17 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   
   <!--  Essential META Tags -->
-  <meta property="og:title" content="URL Shortener">
+  <meta property="og:title" content="URL Shortener | URL shortening and analysis service">
   <meta property="og:type" content="website" />
   <meta property="og:image" content="/assets/meta-image.png">
   <meta property="og:url" content="https://url-shortener.rubenconde.com/">
-  <meta name="twitter:card" content="summary_large_image">
-  
-  <!--  Non-Essential, But Recommended -->
-  <meta property="og:description" content="Tool to shorten urls and share them more efficiently. By RUBN/COND">
+  <meta property="og:description" content="Create, shorten and share long links to make them more optimal. Analyze your statistics individually or as a group and get the highest possible efficiency.">
   <meta property="og:site_name" content="URL Shortener">
+  <meta name="twitter:card" content="summary_large_image">
   <meta name="twitter:image:alt" content="URL Shortener">
+  <meta name="twitter:title" content="URL Shortener | URL shortening and analysis service">
+  <meta name="twitter:description" content="Create, shorten and share long links to make them more optimal. Analyze your statistics individually or as a group and get the highest possible efficiency.">
+  <meta name="twitter:image" content=" http://euro-travel-example.com/thumbnail.jpg">
 
   <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
   <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
@@ -27,6 +28,7 @@
   <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
   <link rel="manifest" href="/manifest.json">
   <link rel="mask-icon" href="/safari-pinned-tab.svg" color="#b5838d">
+
   <script>
     (function () {
        const prefersDark =
