fix: :bug: Meta tags
Signed-off-by: Rubén Conde <ruben.conde@ux-key.com>

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
   <meta name="twitter:image:alt" content="URL Shortener">
   <meta name="twitter:title" content="URL Shortener | URL shortening and analysis service">
   <meta name="twitter:description" content="Create, shorten and share long links to make them more optimal. Analyze your statistics individually or as a group and get the highest possible efficiency.">
-  <meta name="twitter:image" content=" http://euro-travel-example.com/thumbnail.jpg">
+  <meta name="twitter:image" content="/assets/meta-image.png">
 
   <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
   <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
