--- a/index.html
+++ b/index.html
@@ -1,46 +1,56 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
-  <meta name="msapplication-TileColor" content="#f8d9c9">
-  <meta name="msapplication-TileImage" content="/mstile-144x144.png">
-  <meta name="theme-color" content="#f8d9c9">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  
-  <!--  Essential META Tags -->
-  <meta property="og:title" content="URL Shortener | URL shortening and analysis service">
-  <meta property="og:type" content="website" />
-  <meta property="og:image" content="/assets/meta-image.png">
-  <meta property="og:url" content="https://url-shortener.rubenconde.com/">
-  <meta property="og:description" content="Create, shorten and share long links to make them more optimal. Analyze your statistics individually or as a group and get the highest possible efficiency.">
-  <meta property="og:site_name" content="URL Shortener">
-  <meta name="twitter:card" content="summary_large_image">
-  <meta name="twitter:image:alt" content="URL Shortener">
-  <meta name="twitter:title" content="URL Shortener | URL shortening and analysis service">
-  <meta name="twitter:description" content="Create, shorten and share long links to make them more optimal. Analyze your statistics individually or as a group and get the highest possible efficiency.">
-  <meta name="twitter:image" content="/assets/meta-image.png">
+   <head>
+      <!--  DEFAULT META Tags -->
+      <meta charset="UTF-8" />
+      <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent" />
 
-  <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
-  <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
-  <link rel="icon" type="image/png" sizes="192x192" href="/android-chrome-192x192.png">
-  <link rel="icon" type="image/png" sizes="194x194" href="/favicon-194x194.png">
-  <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
-  <link rel="manifest" href="/manifest.json">
-  <link rel="mask-icon" href="/safari-pinned-tab.svg" color="#b5838d">
+      <!--  Sharing META Tags -->
+      <meta name="twitter:card" content="summary_large_image" />
+      <meta name="twitter:creator" content="rubncond" />
+      <meta
+         name="twitter:description"
+         content="Create, shorten and share long links to make them more optimal. Analyze their statistics individually or as a group and get the highest possible efficiency."
+      />
+      <meta name="twitter:image:alt" content="URL Shortener" />
+      <meta name="twitter:image" content="/assets/meta-image.png" />
+      <meta name="twitter:title" content="URL Shortener | URL shortening and analysis service" />
+      <meta
+         property="og:description"
+         content="Create, shorten and share long links to make them more optimal. Analyze their statistics individually or as a group and get the highest possible efficiency."
+      />
+      <meta property="og:image:alt" content="URL Shortener" />
+      <meta property="og:image" content="/assets/meta-image.png" />
+      <meta property="og:site_name" content="URL Shortener" />
+      <meta property="og:title" content="URL Shortener | URL shortening and analysis service" />
+      <meta property="og:type" content="website" />
+      <meta property="og:url" content="https://url-shortener.rubenconde.com/" />
 
-  <script>
-    (function () {
-       const prefersDark =
-          window.matchMedia && window.matchMedia('(prefers-color-scheme: dark)').matches;
-       const setting = localStorage.getItem('vueuse-color-scheme') || 'auto';
-   if (setting === 'dark' || (prefersDark && setting !== 'light'))
-          document.documentElement.classList.toggle('dark', true);
-    })();
-  </script>
-</head>
-<body>
-  <div id="app"></div>
-  <script type="module" src="/src/main.ts"></script>
-</body>
+      <!--  PWA Tags -->
+      <meta name="msapplication-TileColor" content="#f8d9c9" />
+      <meta name="msapplication-TileImage" content="/mstile-144x144.png" />
+      <meta name="theme-color" content="#f8d9c9" />
+      <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+      <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png" />
+      <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png" />
+      <link rel="icon" type="image/png" sizes="192x192" href="/android-chrome-192x192.png" />
+      <link rel="icon" type="image/png" sizes="194x194" href="/favicon-194x194.png" />
+      <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png" />
+      <link rel="manifest" href="/manifest.json" />
+      <link rel="mask-icon" href="/safari-pinned-tab.svg" color="#b5838d" />
+
+      <script>
+         (function () {
+            const prefersDark =
+               window.matchMedia && window.matchMedia('(prefers-color-scheme: dark)').matches;
+            const setting = localStorage.getItem('vueuse-color-scheme') || 'auto';
+            if (setting === 'dark' || (prefersDark && setting !== 'light'))
+               document.documentElement.classList.toggle('dark', true);
+         })();
+      </script>
+   </head>
+   <body>
+      <div id="app"></div>
+      <script type="module" src="/src/main.ts"></script>
+   </body>
 </html>
