--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
    <head>
       <!--  DEFAULT META Tags -->
       <meta charset="UTF-8" />
-      <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent" />
+      <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
       <!--  Sharing META Tags -->
       <meta name="twitter:card" content="summary_large_image" />
@@ -13,24 +13,32 @@
          content="Create, shorten and share long links to make them more optimal. Analyze their statistics individually or as a group and get the highest possible efficiency."
       />
       <meta name="twitter:image:alt" content="URL Shortener" />
-      <meta name="twitter:image" content="/assets/meta-image.png" />
+      <meta
+         name="twitter:image"
+         content="https://url-shortener.rubenconde.com/assets/meta-image.webp"
+      />
       <meta name="twitter:title" content="URL Shortener | URL shortening and analysis service" />
       <meta
          property="og:description"
          content="Create, shorten and share long links to make them more optimal. Analyze their statistics individually or as a group and get the highest possible efficiency."
       />
       <meta property="og:image:alt" content="URL Shortener" />
-      <meta property="og:image" content="/assets/meta-image.png" />
+      <meta property="og:image:height" content="1080" />
+      <meta property="og:image:width" content="1920" />
+      <meta
+         property="og:image"
+         content="https://url-shortener.rubenconde.com/assets/meta-image.webp"
+      />
       <meta property="og:site_name" content="URL Shortener" />
       <meta property="og:title" content="URL Shortener | URL shortening and analysis service" />
       <meta property="og:type" content="website" />
       <meta property="og:url" content="https://url-shortener.rubenconde.com/" />
 
       <!--  PWA Tags -->
+      <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent" />
       <meta name="msapplication-TileColor" content="#f8d9c9" />
       <meta name="msapplication-TileImage" content="/mstile-144x144.png" />
       <meta name="theme-color" content="#f8d9c9" />
-      <meta name="viewport" content="width=device-width, initial-scale=1.0" />
       <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png" />
       <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png" />
       <link rel="icon" type="image/png" sizes="192x192" href="/android-chrome-192x192.png" />
