--- a/index.html
+++ b/index.html
@@ -4,35 +4,52 @@
       <!--  DEFAULT META Tags -->
       <meta charset="UTF-8" />
       <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+      <meta
+         name="description"
+         content="Create, shorten and share long links to make them more optimal. Analyze their statistics individually or as a group and get the highest possible efficiency. URL Shortener by RUBN/COND"
+      />
+      <meta
+         name="keywords"
+         content="uRL, url, shortener, short, tool, short url, url shortener, rubncond, RUBN/COND, ruben conde, ruben, conde, acortar, shorten, corto, cortar"
+      />
 
-      <!--  Sharing META Tags -->
-      <meta name="twitter:card" content="summary_large_image" />
-      <meta name="twitter:creator" content="rubncond" />
+      <!-- Google / Search Engine Tags -->
       <meta
-         name="twitter:description"
-         content="Create, shorten and share long links to make them more optimal. Analyze their statistics individually or as a group and get the highest possible efficiency."
+         itemprop="description"
+         content="Create, shorten and share long links to make them more optimal. Analyze their statistics individually or as a group and get the highest possible efficiency. URL Shortener by RUBN/COND"
       />
-      <meta name="twitter:image:alt" content="URL Shortener" />
-      <meta
-         name="twitter:image"
-         content="https://url-shortener.rubenconde.com/assets/meta-image.webp"
-      />
-      <meta name="twitter:title" content="URL Shortener | URL shortening and analysis service" />
+      <meta itemprop="image" content="http://url-shortener.rubenconde.com/assets/meta-image.webp" />
+      <meta itemprop="name" content="URL Shortener | URL shortening and analysis service" />
+
+      <!-- Facebook Tags -->
       <meta
          property="og:description"
-         content="Create, shorten and share long links to make them more optimal. Analyze their statistics individually or as a group and get the highest possible efficiency."
+         content="Create, shorten and share long links to make them more optimal. Analyze their statistics individually or as a group and get the highest possible efficiency. URL Shortener by RUBN/COND"
       />
       <meta property="og:image:alt" content="URL Shortener" />
       <meta property="og:image:height" content="1080" />
       <meta property="og:image:width" content="1920" />
       <meta
          property="og:image"
-         content="https://url-shortener.rubenconde.com/assets/meta-image.webp"
+         content="http://url-shortener.rubenconde.com/assets/meta-image.webp"
       />
-      <meta property="og:site_name" content="URL Shortener" />
       <meta property="og:title" content="URL Shortener | URL shortening and analysis service" />
       <meta property="og:type" content="website" />
-      <meta property="og:url" content="https://url-shortener.rubenconde.com/" />
+      <meta property="og:url" content="https://url-shortener.rubenconde.com" />
+
+      <!-- Twitter Tags -->
+      <meta name="twitter:card" content="summary_large_image" />
+      <meta name="twitter:creator" content="rubncond" />
+      <meta
+         name="twitter:description"
+         content="Create, shorten and share long links to make them more optimal. Analyze their statistics individually or as a group and get the highest possible efficiency. URL Shortener by RUBN/COND"
+      />
+      <meta name="twitter:image:alt" content="URL Shortener" />
+      <meta
+         name="twitter:image"
+         content="http://url-shortener.rubenconde.com/assets/meta-image.webp"
+      />
+      <meta name="twitter:title" content="URL Shortener | URL shortening and analysis service" />
 
       <!--  PWA Tags -->
       <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent" />
@@ -57,6 +74,7 @@
          })();
       </script>
    </head>
+
    <body>
       <div id="app"></div>
       <script type="module" src="/src/main.ts"></script>
