fix: :adhesive_bandage: Title tag
Signed-off-by: Rubén Conde <ruben.conde@ux-key.com>

--- a/index.html
+++ b/index.html
@@ -3,15 +3,16 @@
    <head>
       <!--  DEFAULT META Tags -->
       <meta charset="UTF-8" />
-      <meta name="viewport" content="width=device-width, initial-scale=1.0" />
       <meta
          name="description"
          content="Create, shorten and share long links to make them more optimal. Analyze their statistics individually or as a group and get the highest possible efficiency. URL Shortener by RUBN/COND"
       />
       <meta
          name="keywords"
-         content="uRL, url, shortener, short, tool, short url, url shortener, rubncond, RUBN/COND, ruben conde, ruben, conde, acortar, shorten, corto, cortar"
+         content="URL, url, shortener, short, tool, short url, url shortener, rubncond, RUBN/COND, ruben conde, ruben, conde, acortar, shorten, corto, cortar"
       />
+      <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+      <title>URL Shortener</title>
 
       <!-- Google / Search Engine Tags -->
       <meta
