refactor: :recycle: Better title and description tag
Signed-off-by: Rubén Conde <ruben.conde@ux-key.com>

--- a/index.html
+++ b/index.html
@@ -5,19 +5,19 @@
       <meta charset="UTF-8" />
       <meta
          name="description"
-         content="Create, shorten and share long links to make them more optimal. Analyze their statistics individually or as a group and get the highest possible efficiency. URL Shortener by RUBN/COND"
+         content="Create, shorten and share long links to make them more optimal. Analyze their statistics individually or as a group and get the highest possible efficiency."
       />
       <meta
          name="keywords"
          content="URL, url, shortener, short, tool, short url, url shortener, rubncond, RUBN/COND, ruben conde, ruben, conde, acortar, shorten, corto, cortar"
       />
       <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-      <title>URL Shortener</title>
+      <title>URL Shortener | URL shortening and analysis service</title>
 
       <!-- Google / Search Engine Tags -->
       <meta
          itemprop="description"
-         content="Create, shorten and share long links to make them more optimal. Analyze their statistics individually or as a group and get the highest possible efficiency. URL Shortener by RUBN/COND"
+         content="Create, shorten and share long links to make them more optimal. Analyze their statistics individually or as a group and get the highest possible efficiency."
       />
       <meta itemprop="image" content="http://url-shortener.rubenconde.com/assets/meta-image.webp" />
       <meta itemprop="name" content="URL Shortener | URL shortening and analysis service" />
@@ -25,7 +25,7 @@
       <!-- Facebook Tags -->
       <meta
          property="og:description"
-         content="Create, shorten and share long links to make them more optimal. Analyze their statistics individually or as a group and get the highest possible efficiency. URL Shortener by RUBN/COND"
+         content="Create, shorten and share long links to make them more optimal. Analyze their statistics individually or as a group and get the highest possible efficiency."
       />
       <meta property="og:image:alt" content="URL Shortener" />
       <meta property="og:image:height" content="1080" />
@@ -43,7 +43,7 @@
       <meta name="twitter:creator" content="rubncond" />
       <meta
          name="twitter:description"
-         content="Create, shorten and share long links to make them more optimal. Analyze their statistics individually or as a group and get the highest possible efficiency. URL Shortener by RUBN/COND"
+         content="Create, shorten and share long links to make them more optimal. Analyze their statistics individually or as a group and get the highest possible efficiency."
       />
       <meta name="twitter:image:alt" content="URL Shortener" />
       <meta
