--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
          property="og:image"
          content="http://url-shortener.rubenconde.com/assets/meta-image.webp"
       />
+      <meta property="og:site_name" content="URL Shortener" />
       <meta property="og:title" content="URL Shortener | URL shortening and analysis service" />
       <meta property="og:type" content="website" />
       <meta property="og:url" content="https://url-shortener.rubenconde.com" />
