fix: :adhesive_bandage: Metadata info and tweaks
Signed-off-by: Rubén Conde <dev@rubn.xyz>

--- a/index.html
+++ b/index.html
@@ -3,13 +3,14 @@
    <head>
       <!--  DEFAULT META Tags -->
       <meta charset="UTF-8" />
+      <meta name="author" content="Rubén Conde" />
       <meta
          name="description"
          content="Create, shorten and share long links to make them more optimal. Analyze their statistics individually or as a group and get the highest possible efficiency."
       />
       <meta
          name="keywords"
-         content="URL, url, shortener, short, tool, short url, url shortener, rubncond, RUBN/COND, ruben conde, ruben, conde, acortar, shorten, corto, cortar"
+         content="url, shortener, url shortener, acortador, enlaces, acotardor de enlaces, cortar, shortening, analysis, service, create, shorten, share, long, links, optimal, statistics, crear, compartir, largos, optimos, estadisticas, ruben, conde, rubenconde, rubncond, rubn, cond"
       />
       <meta name="viewport" content="width=device-width, initial-scale=1.0" />
       <title>Cutting Ninja | URL shortening and analysis service</title>
@@ -19,7 +20,7 @@
          itemprop="description"
          content="Create, shorten and share long links to make them more optimal. Analyze their statistics individually or as a group and get the highest possible efficiency."
       />
-      <meta itemprop="image" content="http://cuttingninja.page/assets/meta-image.webp" />
+      <meta itemprop="image" content="https://cuttingninja.page/assets/meta-image.webp" />
       <meta itemprop="name" content="Cutting Ninja | URL shortening and analysis service" />
 
       <!-- Facebook Tags -->
@@ -30,7 +31,7 @@
       <meta property="og:image:alt" content="Cutting Ninja" />
       <meta property="og:image:height" content="1080" />
       <meta property="og:image:width" content="1920" />
-      <meta property="og:image" content="http://cuttingninja.page/assets/meta-image.webp" />
+      <meta property="og:image" content="https://cuttingninja.page/assets/meta-image.webp" />
       <meta property="og:site_name" content="Cutting Ninja" />
       <meta property="og:title" content="Cutting Ninja | URL shortening and analysis service" />
       <meta property="og:type" content="website" />
@@ -44,21 +45,21 @@
          content="Create, shorten and share long links to make them more optimal. Analyze their statistics individually or as a group and get the highest possible efficiency."
       />
       <meta name="twitter:image:alt" content="Cutting Ninja" />
-      <meta name="twitter:image" content="http://cuttingninja.page/assets/meta-image.webp" />
+      <meta name="twitter:image" content="https://cuttingninja.page/assets/meta-image.webp" />
       <meta name="twitter:title" content="Cutting Ninja | URL shortening and analysis service" />
 
       <!--  PWA Tags -->
       <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent" />
-      <meta name="msapplication-TileColor" content="#f8d9c9" />
+      <meta name="msapplication-TileColor" content="#F8D9C9" />
       <meta name="msapplication-TileImage" content="/mstile-144x144.png" />
-      <meta name="theme-color" content="#f8d9c9" />
+      <meta name="theme-color" content="#F8D9C9" />
       <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png" />
       <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png" />
       <link rel="icon" type="image/png" sizes="192x192" href="/android-chrome-192x192.png" />
       <link rel="icon" type="image/png" sizes="194x194" href="/favicon-194x194.png" />
       <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png" />
       <link rel="manifest" href="/manifest.json" />
-      <link rel="mask-icon" href="/safari-pinned-tab.svg" color="#b5838d" />
+      <link rel="mask-icon" href="/safari-pinned-tab.svg" color="#3D3A41" />
 
       <script>
          (function () {
