--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
       </script>
    </head>
 
-   <body>
+   <body class="select-none">
       <div id="app"></div>
       <script type="module" src="/src/main.ts"></script>
    </body>
