--- a/index.html
+++ b/index.html
@@ -20,7 +20,10 @@
          itemprop="description"
          content="Create, shorten and share long links to make them more optimal. Analyze their statistics individually or as a group and get the highest possible efficiency."
       />
-      <meta itemprop="image" content="https://cuttingninja.page/assets/meta-image.webp" />
+      <meta
+         itemprop="image"
+         content="https://cuttingninja.mariachibear.com/assets/meta-image.webp"
+      />
       <meta itemprop="name" content="Cutting Ninja | URL shortening and analysis service" />
 
       <!-- Facebook Tags -->
@@ -31,11 +34,14 @@
       <meta property="og:image:alt" content="Cutting Ninja" />
       <meta property="og:image:height" content="1080" />
       <meta property="og:image:width" content="1920" />
-      <meta property="og:image" content="https://cuttingninja.page/assets/meta-image.webp" />
+      <meta
+         property="og:image"
+         content="https://cuttingninja.mariachibear.com/assets/meta-image.webp"
+      />
       <meta property="og:site_name" content="Cutting Ninja" />
       <meta property="og:title" content="Cutting Ninja | URL shortening and analysis service" />
       <meta property="og:type" content="website" />
-      <meta property="og:url" content="https://cuttingninja.page" />
+      <meta property="og:url" content="https://cuttingninja.mariachibear.com" />
 
       <!-- Twitter Tags -->
       <meta name="twitter:card" content="summary_large_image" />
@@ -45,7 +51,10 @@
          content="Create, shorten and share long links to make them more optimal. Analyze their statistics individually or as a group and get the highest possible efficiency."
       />
       <meta name="twitter:image:alt" content="Cutting Ninja" />
-      <meta name="twitter:image" content="https://cuttingninja.page/assets/meta-image.webp" />
+      <meta
+         name="twitter:image"
+         content="https://cuttingninja.mariachibear.com/assets/meta-image.webp"
+      />
       <meta name="twitter:title" content="Cutting Ninja | URL shortening and analysis service" />
 
       <!--  PWA Tags -->
