--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
       />
       <meta
          name="keywords"
-         content="url, shortener, url shortener, acortador, enlaces, acotardor de enlaces, cortar, shortening, analysis, service, create, shorten, share, long, links, optimal, statistics, crear, compartir, largos, optimos, estadisticas, ruben, conde, rubenconde, rubncond, rubn, cond"
+         content="url, shortener, url shortener, acortador, enlaces, acotardor de enlaces, cortar, shortening, analysis, service, create, shorten, share, long, links, optimal, statistics, crear, compartir, largos, optimos, estadisticas, ruben, conde, rubenconde, rubncond, rubn, cond, cutting, ninja, Bitly, Rebrandly, TinyURL, BL.INK, Zapier, Short.io, Sniply, mariachibear"
       />
       <meta name="viewport" content="width=device-width, initial-scale=1.0" />
       <title>Cutting Ninja | URL shortening and analysis service</title>
@@ -20,10 +20,7 @@
          itemprop="description"
          content="Create, shorten and share long links to make them more optimal. Analyze their statistics individually or as a group and get the highest possible efficiency."
       />
-      <meta
-         itemprop="image"
-         content="https://cuttingninja.mariachibear.com/assets/meta-image.webp"
-      />
+      <meta itemprop="image" content="/assets/meta-image.webp" />
       <meta itemprop="name" content="Cutting Ninja | URL shortening and analysis service" />
 
       <!-- Facebook Tags -->
@@ -34,10 +31,7 @@
       <meta property="og:image:alt" content="Cutting Ninja" />
       <meta property="og:image:height" content="1080" />
       <meta property="og:image:width" content="1920" />
-      <meta
-         property="og:image"
-         content="https://cuttingninja.mariachibear.com/assets/meta-image.webp"
-      />
+      <meta property="og:image" content="/assets/meta-image.webp" />
       <meta property="og:site_name" content="Cutting Ninja" />
       <meta property="og:title" content="Cutting Ninja | URL shortening and analysis service" />
       <meta property="og:type" content="website" />
@@ -51,10 +45,7 @@
          content="Create, shorten and share long links to make them more optimal. Analyze their statistics individually or as a group and get the highest possible efficiency."
       />
       <meta name="twitter:image:alt" content="Cutting Ninja" />
-      <meta
-         name="twitter:image"
-         content="https://cuttingninja.mariachibear.com/assets/meta-image.webp"
-      />
+      <meta name="twitter:image" content="/assets/meta-image.webp" />
       <meta name="twitter:title" content="Cutting Ninja | URL shortening and analysis service" />
 
       <!--  PWA Tags -->
